implementing flight